# boom

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  BABAMUL_SIGNUP_IMPLEMENTATION.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-benchmark  Dockerfile.gpu  LICENSE  Makefile  README.md  apptainer.sh  apptainer_compose.sh  apptainer_healthchecks.sh  benchmark.md  build.rs  config.default.yaml  config.yaml  docker-compose.cuda.yaml  docker-compose.cutouts-mongo.yaml  docker-compose.cutouts-s3-external.yaml  docker-compose.cutouts-s3.yaml  docker-compose.default.yaml  docker-compose.gpu.yaml  docker-compose.milvus.yaml  docker-compose.override.yaml  docker-compose.yaml  index.html  otel-collector-config.yaml  package.json  prometheus.yaml  telegram_update.sh  test.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-fork.yaml  build.yaml  deploy-trigger.yaml  deploy.yaml  docker-compose-cache.json  format.yaml  frontend.yaml  sync-configs.yaml  test-throughput-comment.yaml  test-throughput.yaml  test.yaml
apache-avro-macros/: Cargo.toml
apache-avro-macros/src/: lib.rs
apache-avro-macros/tests/: schema_generation.rs
api/: Cargo.toml
api/src/: auth.rs  conf.rs  db.rs  docs.rs  filters.rs  kafka.rs  lib.rs  main.rs  test_utils.rs
api/src/api/: alerts.rs  auth.rs  filters.rs  mod.rs  query.rs  users.rs
api/src/models/: response.rs
api/src/routes/: auth.rs  catalogs.rs  filters.rs  info.rs  kafka.rs  mod.rs  objects.rs  queries.rs  surveys.rs  users.rs
api/src/routes/queries/: cone_search.rs  count.rs  find.rs  mod.rs  pipeline.rs
api/tests/: test_auth.rs  test_catalogs.rs  test_conf.rs  test_filters.rs  test_queries.rs  test_query.rs  test_users.rs
api/tests/data/filters/: test_post_filter_query_body.json
apptainer/: apptainer_compose.sh  run.py  run_apptainer.sh
apptainer/def/: api.def  boom-benchmarking.def  boom.def  build-sif.sh  dev.def  grafana.def  kafka.def  kuma.def  mongo.def  prometheus.def  valkey.def
apptainer/script/: kafka-healthcheck.sh
apptainer/scripts/: add_filters.sh  apptainer_compose.sh  apptainer_start.sh  boom-healthcheck-listener.py  boom-listener-healthcheck.sh  build-sif.sh  kafka-healthcheck.sh  kuma-healthcheck.sh  mongodb-healthcheck.sh  process-healthcheck.sh  prometheus-healthcheck.sh  valkey-healthcheck.sh
benches/: filter_benchmark.rs
config/: apptainer-otel-collector-config.yaml  docker-compose.traefik.yml  nginx.conf  otel-collector-config.yaml  prometheus.yaml
config/docker-socket-proxy/: haproxy.cfg.template
config/promtail/: promtail-config.yaml
config/tempo/: tempo-config.yaml
consumer/: Cargo.toml  bla
consumer/src/: app.rs  config.rs  consumer.rs  lib.rs  main.rs  source.rs
consumer/src/sources/: decam.rs  lsst.rs  mod.rs  ztf.rs
crates/boom-api/: Cargo.toml
crates/boom-api/src/: auth.rs  docs.rs  main.rs
crates/boom-api/src/routes/: auth.rs  catalogs.rs  filters.rs  info.rs  queries.rs  surveys.rs  users.rs
crates/boom-api/tests/: test_auth.rs  test_catalogs.rs  test_filters.rs  test_users.rs
crates/boom-config/: Cargo.toml
crates/boom-db/: Cargo.toml
crates/boom-db/src/: lib.rs
data/: S240618ah_bayestar.fits  S251031cq_bayestar.fits  glg_healpix_all_bn200524211.fits  ls_dr10_footprint_moc.fits  ls_footprint_moc.fits
data/models/: DECam_mnv3_CNN.onnx  acai_b.d1_dnn_20201130_nchw.onnx  acai_h.d1_dnn_20201130.onnx  acai_h.d1_dnn_20201130_nchw.onnx  acai_n.d1_dnn_20201130_nchw.onnx  acai_o.d1_dnn_20201130_nchw.onnx  acai_v.d1_dnn_20201130_nchw.onnx  btsbot-v2.0.0.onnx  cider_fusion_plus_embedding.onnx  cider_photometry.onnx
docs/: alert-processing.md  babamul-api.md  babamul-quick-reference.md  babamul.md  binned-lightcurves.md  data-model.md  deployment.md  flamegraph.md  gpu.md  kafka-auth.md  milvus.md  observability.md  telemetry.md
docs/tracing-throughput-test/: tracing-throughput-test.md
frontend/: .dockerignore  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  index.html  package.json  test2.js  tsconfig.app.json  vite.config.ts
frontend/config/: nginx.conf
frontend/src/: App.tsx
k8s/: 08-boom-scheduler-ztf.yaml
proto/milvus/: README.md
schema/lsst/: lsst.v7_3.alert.avsc
scripts/: apptainer_init_kafka_acls.sh  delete-produce-ztf-dev.sh  docker_metadata_exporter.py  grafana-dashboard-provisioning.sh  init_kafka_acls.sh  test_babamul_signup.sh  throughput_test.sh  warmup_ort_cuda.sh
scripts/convert2onnx/: convert2onnx.py
scripts/kafka_utils/: list-topics.py
src/: App.tsx  alert.rs  alert_worker.rs  conf.rs  db.rs  fake_ml_worker.rs  filter.rs  filter_worker.rs  fits.rs  index.css  kafka.rs  lib.rs  lsst_types.rs  main.rs  main.tsx  query.rs  scheduling.rs  spatial.rs  testing_util.rs  types.rs  worker_util.rs  ztf_alerts.rs
src/alert/: askap.rs  base.rs  decam.rs  lsst.rs  mod.rs  winter.rs  ztf.rs
src/api/: auth.rs  babamul_auth.rs  catalogs.rs  cutouts.rs  db.rs  docs.rs  email.rs  filters.rs  kafka.rs  mod.rs  observability.rs  test_utils.rs
src/assets/: ZTF25aagbkaj.json
src/components/: Aladin.tsx  CentroidPlot.tsx  Classifications.tsx  ClassificationsHistory.tsx  ClassificationsV2.tsx  CrossmatchCard.tsx  Header.tsx  Kilonova.tsx  LandingSky.tsx  Lightcurve.tsx  SchemaViewer.tsx  app-sidebar.tsx  login-form.tsx  mode-toggle.tsx  nav-documents.tsx  nav-user.tsx  search-dialog.tsx  section-cards.tsx  site-header.tsx  theme-provider.tsx
src/enrichment/: askap.rs  babamul.rs  base.rs  decam.rs  lsst.rs  mod.rs  winter.rs  ztf.rs
src/feature/: base.rs  mod.rs  ztf.rs
src/filter/: askap.rs  base.rs  decam.rs  lsst.rs  mod.rs  winter.rs  ztf.rs
src/fitting/: mod.rs  (+3 more)
tests/: bench_gpu_vs_cpu.rs  config.test.yaml  test_askap.rs  test_babamul.rs  test_conf.rs  test_decam.rs  test_filter.rs  test_healpix_benchmark.rs  test_kafka.rs  test_kafka_auth.rs  test_lsst.rs  test_milvus_e2e.rs  test_scheduler_logging.rs  test_schema_registry.rs  test_sharding_demo.rs  test_spatial.rs  test_types.rs  test_winter.rs  test_ztf.rs
(+238 files in other folders)
