[workspace]
resolver = "3"
members = ["api"]

[package]
name = "boom"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = { version = "0.20.0", features = ["snappy"] }
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4", features = ["derive", "env"] }
config = "0.15.18"
constcat = "0.6.1"
flare = "0.2.0"
flate2 = "1.1.4"
futures = "0.3.31"
indicatif = "0.18.0"
mongodb = "3.3.0"
ndarray = "0.16.1"
openssl = { version = "0.10.73", features = ["vendored"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = "0.31.0"
rand = "0.9.2"
rdkafka = { version = "0.38.0", features = ["gssapi", "ssl", "tracing", "sasl"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"]}
uuid = { version = "1.18", features = ["v4"] }
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }

# on mac os silicon platform, install ort with the coreml feature
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["coreml"] }

# otherwise, install ort with the cuda feature
[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda"] }

[dev-dependencies]
criterion = "0.7"
