[package]
name = "boom"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.11.0"
aes-gcm = "0.10.3"
apache-avro = { version = "0.21.0", features = ["snappy", "derive"] }
apache-avro-derive = "0.21.0"
apache-avro-macros = { version = "1", path = "apache-avro-macros" }
async-trait = "0.1.89"
base64 = "0.22.1"
bcrypt = "0.17.1"
cdshealpix = "0.7.3"
chrono = "0.4.42"
clap = { version = "4", features = ["derive", "env"] }
config = "0.15.18"
constcat = "0.6.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
flare = "0.2.0"
futures = "0.3.31"
hifitime = "4.2.3"
indicatif = "0.18.0"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
moc = "0.19.1"
mongodb = { version = "3.3.0", default-features = false, features = ["rustls-tls", "bson-2", "compat-3-3-0"] }
ndarray = "0.16.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = "0.31.0"
rand = "0.9.2"
# rdkafka base - ssl/sasl/gssapi added per-platform below
rdkafka = { version = "0.38.0", features = ["tracing"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "signal"] }
tracing = "0.1.41"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"]}
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
uuid = { version = "1.18", features = ["v4"] }
which = "7.0.0"
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }

# macOS: ort with CoreML, rdkafka with ssl/sasl
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["coreml"] }
rdkafka = { version = "0.38.0", features = ["gssapi", "ssl", "sasl"] }

# Linux: ort with CUDA, rdkafka with ssl/sasl
[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda"] }
rdkafka = { version = "0.38.0", features = ["gssapi", "ssl", "sasl"] }

# Windows: ort without special accelerator, rdkafka with cmake-build (avoids shell scripts)
[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.10" }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }

[workspace]
members = ["apache-avro-macros"]
