[package]
name = "apache-avro-macros"
version = "1.0.0"

description = "Macros for apache-avro serialization and deserialization using serde"
categories = ["encoding"]
keywords = ["avro", "data", "serde", "serialization"]
readme = "README.md"

edition = "2024"
rust-version = "1.85.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# add serde and apache-avro and apach-avro-derive as dev dependencies for testing
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
apache-avro = { version = "0.21.0", features = ["snappy", "derive"] }
apache-avro-derive = "0.21.0"

[lints.clippy]
explicit_iter_loop = "warn"
flat_map_option = "warn"
ignored_unit_patterns = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
use_self = "warn"
