[package]
name = "boom-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.11.0"
bcrypt = "0.17.1"
config = "0.15.18"
futures = "0.3.31"
mongodb = "3.3.0"
serde = "1.0.228"
serde_json = "1.0.145"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1" # 10.0.0 shows a performance hit, due to its new "backends" feature
chrono = "0.4.42"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-scalar = { version = "0.3", features = ["actix-web"] }
base64 = "0.22.1"
serde_with = "3.15.0"
flare = "0.2.0"

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]
