[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
boom = { path = "../" }
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive", "env"] }
color-eyre = "0.6.5"
config = "0.15.16"
nix = { version = "0.30.1", features = ["signal"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = "0.31.0"
rdkafka = "0.38.0"
redis = { version = "0.32.5", features = ["tokio-comp"] }
secrecy = { version = "0.10.3", features = ["serde"]}
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
