[package]
name = "boom-api"
version = "0.1.0"
edition = "2021"
description = "REST API for BOOM"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
base64 = "0.22.1"
bcrypt = "0.17.0"
boom-config = { path = "../boom-config" }
boom-db = { path = "../boom-db" }
chrono = "0.4.41"
env_logger = "0.11.8"
flare = "0.2.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = "3.1.0"
serde = "1.0.215"
serde_json = "1.0.138"
serde_with = "3.13.0"
tracing = "0.1.41"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-scalar = { version = "0.3", features = ["actix-web"] }
uuid = { version = "1.16.0", features = ["v4"] }
